# Galileo

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  cmake_uninstall.cmake.in  galileoConfig.cmake.in
cmake/: FindCASADI.cmake
docs/: README.md  main.md  test.wsd
docs/src/: LICENSE  doxygen-style.css
examples/: CMakeLists.txt  model_building_test.cpp  problem_data_example.cpp  simple_test.cpp  simple_traj_test.cpp  test.cpp  traj_test.cpp
examples/include/: atlas_test.h  biqu_test.h  go1_test.h  huron_test.h  simple_test.h  traj_test.h
examples/src/: atlas_test.cpp  biqu_test.cpp  go1_nonhorizontal_test.cpp  go1_test.cpp  huron_test.cpp  model_building_test.cpp  mpc_go1_test.cpp  rho_beta_epsilon.cpp  rho_beta_epsilon_test2.cpp  simple_test.cpp  traj_test.cpp
examples/visualization/: ik.py  metadata.csv  sol_states.csv  sol_times.csv  visualize_traj.py
examples/visualization/meshcat_viewer_wrapper/: __init__.py  tests.py  transformations.py  visualizer.py
examples/visualization/solution_data/: sol_states.csv  sol_times.csv
galileo/: CMakeLists.txt
galileo/legged-model/src/: ContactSequence.cpp  EnvironmentSurfaces.cpp  LeggedBody.cpp  LeggedInterface.cpp  LeggedModelHelpers.cpp  LeggedRobotStates.cpp
galileo/legged-model/test/: TestLeggedBody.cc
galileo/model/: CMakeLists.txt
galileo/model/include/: ContactSequence.h  EndEffector.h  EnvironmentSurfaces.h  LeggedBody.h
galileo/model/include/LeggedConstraints/: FrictionConeConstraintBuilder.h
galileo/model/include/galileo/model/: ContactSequence.h  EndEffector.h  EnvironmentSurfaces.h  FrictionConeConstraintBuilder.h  LeggedBody.h
galileo/model/src/: ContactSequence.cpp  EnvironmentSurfaces.cpp  LeggedBody.cpp
galileo/test/: CMakeLists.txt  model_building_test.cpp  simple_traj_test.cpp  test.cpp  traj_test.cpp
galileo/tools/: CMakeLists.txt
galileo/tools/include/galileo/tools/: CasadiConversions.h  CasadiTools.h  GNUPlotInterface.h  MeshcatInterface.h  ReadFromFile.h
galileo/tools/src/: CasadiConversions.cpp  CasadiTools.cpp  GNUPlotInterfce.cpp  MeshcatInterface.cpp  ReadFromFile.cpp
galileo/variables/: CMakeLists.txt
galileo/variables/include/: Constraint.h  PseudospectralSegment.h  States.h  TrajectoryGeneration.h  TrajectoryOpt.h
galileo/variables/include/galileo/variables/: Constraint.h  PseudospectralSegment.h  States.h  TrajectoryGeneration.h  TrajectoryOpt.h
galileo/variables/src/: PseudospectralSegment.cpp  States.cpp  TrajectoryGeneration.cpp  TrajectoryOpt.cpp
galileo_ros/: CMakeLists.txt  README.md  package.xml
galileo_ros/Nodes/: galileo_legged_test_node.cpp
galileo_ros/galileo_ros/: CMakeLists.txt
galileo_ros/include/galileo_ros/: GalileoLeggedRos.h  commanding_controller.h  galileo_legged_ros_implementation.h
galileo_ros/launch/: atlas_galileo_ros.launch  atlas_galileo_ros_rviz.launch  biqu_galileo_ros.launch  biqu_galileo_ros_rviz.launch  biqu_galileo_ros_surfaces.launch  biqu_go1_galileo_ros.launch  biqu_go1_galileo_ros_rviz.launch  galileo_ros.launch  galileo_ros_rviz.launch  go1_galileo_ros.launch  go1_galileo_ros_rviz.launch  go1_rviz.rviz  huron_galileo_ros.launch  huron_galileo_ros_rviz.launch  rviz_visual.launch  turbo_huron_galileo_ros.launch  turbo_huron_galileo_ros_rviz.launch
galileo_ros/msg/: ContactMode.msg  ContactPhase.msg  ContactSequence.msg  EnvironmentSurface.msg  GalileoCommand.msg  ModelLocation.msg  ParameterFileLocation.msg  RobotCommand.msg  RobotModel.msg  RobotSolution.msg
galileo_ros/rviz/: BiQu.rviz  atlas.rviz  go1.rviz  go1_.rviz  huron.rviz  huron2.rviz
galileo_ros/src/: GalileoLeggedRos.cpp  commanding_controller.cpp  galileo_legged_ros_implementation.cpp
galileo_ros/src/Nodes/: galileo_legged_initialization_node.cpp  galileo_legged_rvis_node.cpp  galileo_legged_rviz_node.cpp  galileo_legged_solver_node.cpp  galileo_legged_test_node.cpp  galileo_legged_verbose_rviz.cpp  galileo_surfaces_node.cpp
galileo_ros/src/helper_nodes/: galileo_legged_example.cpp  galileo_legged_poll_solution.cpp  set_initial_joint.py  switch_controller_client.cpp
galileo_ros/srv/: DesiredStateCmd.srv  DesiredStateInputCmd.srv  InitState.srv  SolutionRequest.srv  WriteSolPlotCons.srv
helpers/include/: save_last_solution.h
python/: README.md  WBC_test.py  huron_centroidal_v4.py  kan_test.py  metadata.csv  new_sol.csv  new_times.csv  package.xml  quadratic_wbc.py  scratchpad.py  set_initial_joint.py  stage1.py  test.py  test2.py  test3.py  test_huron_centroidal.py  test_quad_prog.py  visualize_traj.py
python/contacts/: __init__.py  contact_sequence.py  end_effector.py  phase.py
python/extract_frames/: extract_frames.py
python/meshcat_viewer_wrapper/: colors.py
python/trajopt/: __init__.py  centroidal_traj_opt.py  model_symbols.py  parameters.py  peudospectral_collocation.py
resources/atlas/: CMakeLists.txt  atlas_convex_hull.urdf  package.xml  robotiq.urdf  robotiq_simple.urdf  robotiq_tendons.urdf
resources/atlas/Parameters/: problem_parameters.txt  problem_parameters_nn_description.txt  solver_parameters.txt
resources/atlas/SolverParameters/: atlas_solver_parameters.txt
resources/atlas/urdf/: LICENSE.TXT  atlas.urdf
resources/biqu/: biqu.urdf
resources/biqu_go1/: CMakeLists.txt  arm.urdf  biqu_go1.urdf  package.xml
resources/go1/: CMakeLists.txt  package.xml
resources/huron/: CMakeLists.txt  package.xml
resources/huron2/: CMakeLists.txt  package.xml
resources/huron2/Parameters/: problem_parameters.txt  solver_parameters.txt
resources/huron2/meshes/: Link5_Left.STL  Link5_Right.STL
resources/huron2/urdf/: huron2.urdf
resources/meshes/: l1_foot_ft_link.STL  l2_foot_ft_link.STL  l3_foot_ft_link.STL  l_hip_yaw_link.STL  r2_foot_ft_link.STL  r_ankle_pitch_link.STL  r_ankle_roll_link.STL
resources/urdf/: huron.urdf  huron.xacro  huron_cheat.urdf  huron_cheat.xacro  huron_description.urdf  huron_left_leg.xacro  huron_right_leg.xacro
test-installs/: CMakeLists.txt  casadi_demo.cpp  casadi_demo2.cpp  casadi_demo3.cpp  full_demo.cpp  pinocchio_demo.cpp  quat_test.cpp
(+136 files in other folders)
