<?xml version="1.0"?>
<package format="2">
  <name>galileo_ros</name>
  <version>0.0.0</version>
  <description>The galileo_ros package</description>

  <maintainer email="akshay@todo.todo">akshay</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>controller_manager_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>controller_manager_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <depend>controller_manager</depend>
  <depend>urdf</depend>
  <depend>rospy</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>