<package format="2">
  <name>galileo</name>
  <version>1.0.0</version>
  <description>
    <p>Guass-Legendre Pseudospectral Collocation of Switched Systems using Casadi and Pinocchio</p>
  </description>
  <author>Ethan Chandler</author>
  <maintainer email="eechandler@wpi.edu" />
  <license>BSD3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <export>
    <architecture_independent />
  </export>
</package>