<?xml version="1.0"?>
<package format="2">
    <name>galileo_atlas_description</name>
    <version>0.0.0</version>galileo_atlas_description
    <description>The atlas_description package</description>

    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
</package>