<?xml version="1.0"?>
<package format="2">
    <name>galileo_huron2_description</name>
    <version>0.0.0</version>galileo_huron2_description
    <description>The galileo_huron2_description package</description>

    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
</package>